# tuberlin-coursework

./: .gitattributes  README.md
CT-SS24/HA2/: README.md  pyproject.toml  requirements.txt
CT-SS24/HA2/choco/: type_checking.py  warn_dead_code.py
CT-SS24/HA2/tests/lexer/: eq.choc  func_def_func_def_func_def_pass.choc  lt.choc  minus.choc  modulo.choc  multiplication.choc  ne.choc  plus.choc  types_1.choc  var_def_1.choc  var_def_func_def_var_def_func_def.choc
CT-SS24/HA2/tests/parser/arithmetic-comparison-ops/ops-coverage/: single_op_div.choc  single_op_gt.choc  single_op_lt.choc  single_op_mod.choc
CT-SS24/HA2/tests/parser/complex-expressions/: index_expr_2d.choc  mul_minus_div_paren.choc
CT-SS24/HA2/tests/parser/complex-expressions/ops_coverage/: single_expr_paren.choc
CT-SS24/HA2/tests/parser/control-flow/ops_coverage/: single_stmt_for.choc  single_stmt_while.choc
CT-SS24/HA2/tests/parser/syntax-errors/comparisons-are-not-associative/: comparison_ops_nonassoc_in_func.choc
CT-SS24/HA2/tests/parser/syntax-errors/expected-expr/: expected_expr_and_expr.choc  expected_expr_index_expr_2d.choc  expected_expr_not_with_comment.choc
CT-SS24/HA2/tests/parser/syntax-errors/token-not-found/: expected_colon_else_case.choc  expected_colon_if_case.choc  expected_identifier_after_nonlocal.choc  expected_newline_after_assign.choc  expected_newline_func_def.choc  expected_rparen_func_call.choc  (+2 more)
CT-SS24/HA2/tests/type-checking/base-rules/: empty.mlir
CT-SS24/HA2/tests/warn-dead-code/basic-tests/: unused_expr.choc  unused_variable.choc
CT-SS24/HA2/tools/: choco_opt.py
(+873 files in other folders)
